src/nl/rubensten/texifyidea/grammar/Latex.bnf
{
    parserClass="nl.rubensten.texifyidea.parser.LatexParser"

    extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

    psiClassPrefix="Latex"
    psiImplClassSuffix="Impl"
    psiPackage="nl.stenwessel.texifyidea.psi"
    psiImplPackage="nl.stenwessel.texifyidea.psi.impl"

    elementTypeHolderClass="nl.rubensten.texifyidea.psi.LatexTypes"
    elementTypeClass="nl.rubensten.texifyidea.psi.LatexElementType"
    tokenTypeClass="nl.rubensten.texifyidea.psi.LatexTokenType"

    tokens=[
        WHITE_SPACE='regexp:\s+'
        DISPLAY_MATH_START='\['
        DISPLAY_MATH_END='\]'
        INLINE_MATH_DELIM='$'
        COMMAND_TOKEN='regexp:\\([a-zA-Z]+|.)'
        COMMENT_TOKEN='regexp:%[^\r\n]*'
        STAR='*'
        OPEN_BRACKET='['
        CLOSE_BRACKET=']'
        OPEN_BRACE='{'
        CLOSE_BRACE='}'
        NORMAL_TEXT='regexp:[^\\{}%\[\]$]+'
    ]
}

latexFile ::= content*

content ::= no_math_content | math_environment

no_math_content ::= comment | command | group | open_group | NORMAL_TEXT

command ::= COMMAND_TOKEN STAR? parameter*

parameter ::= optional_param | required_param

optional_param ::= open_group

required_param ::= group

group ::= OPEN_BRACE content* CLOSE_BRACE

open_group ::= OPEN_BRACKET content* CLOSE_BRACKET

comment ::= COMMENT_TOKEN

math_environment ::= inline_math | display_math

inline_math ::= INLINE_MATH_DELIM (no_math_content)* INLINE_MATH_DELIM

display_math ::= DISPLAY_MATH_START (no_math_content)* DISPLAY_MATH_END
